# TBAS

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt  TBASMain.cpp
sources/TBASAuthorizationWidget/: TBASAuthorizationWidget.cpp  TBASAuthorizationWidget.hpp  TBASAuthorizationWidget.ui
sources/TBASMainWindow/: TBASMainWindow.cpp  TBASMainWindow.hpp  TBASMainWindow.ui
